--- a/package.json
+++ b/package.json
@@ -3,20 +3,23 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-  "dev": "next dev",
-  "build": "prisma generate && next build",
-  "start": "next start",
-  "postinstall": "prisma generate"
-},
+    "dev": "next dev",
+    "build": "prisma generate && next build",
+    "start": "next start",
+    "postinstall": "prisma generate"
+  },
   "dependencies": {
     "@clerk/nextjs": "^6.33.7",
     "@prisma/client": "6.18.0",
+    "canvas-confetti": "^1.9.4",
     "dotenv": "^17.2.3",
+    "framer-motion": "^12.23.24",
     "i": "^0.3.7",
     "lucide-react": "^0.545.0",
     "mongodb": "^6.20.0",
     "nanoid": "^5.1.6",
     "next": "15.5.4",
+    "next-themes": "^0.4.6",
     "nodemon": "^3.1.10",
     "npm": "^11.6.2",
     "react": "19.1.0",
