--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@clerk/nextjs": "^6.33.7",
     "@prisma/client": "6.18.0",
+    "@vercel/analytics": "^1.5.0",
     "canvas-confetti": "^1.9.4",
     "dotenv": "^17.2.3",
     "framer-motion": "^12.23.24",
